--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,23 @@
+@import "~slick-carousel/slick/slick.css";
+@import "~slick-carousel/slick/slick-theme.css";
+
+.slick-dots li button::before {
+  width: 16px !important;
+  height: 16px !important;
+  font-size: 16px !important;
+  border-radius: 50% !important;
+  color: grey !important; /* MUI primary color or any */
+  opacity: 1 !important;
+}
+
+.slick-dots li.slick-active button::before {
+  color: #1976d2  !important; /* darker shade for active */
+}
+
+.css-2wqyjp-MuiPaper-root-MuiCard-root{
+  padding: 32px !important;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
