--- a/src/index.css
+++ b/src/index.css
@@ -11,23 +11,29 @@
 }
 
 .slick-dots li.slick-active button::before {
-  color: #1976d2  !important; /* darker shade for active */
+  color: #1976d2 !important; /* darker shade for active */
 }
 
-.css-2wqyjp-MuiPaper-root-MuiCard-root{
-  padding: 32px !important;
+.MuiPaper-elevation1 {
+  padding: 36px !important;
+}
+
+@media (max-width: 900px) {
+  .MuiPaper-elevation1 {
+    padding: 16 !important;
+  }
 }
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
